--- a/assets/fonts.css
+++ b/assets/fonts.css
@@ -1,43 +1,43 @@
 @font-face {
     font-family: 'Lato';
-    src: url('Lato-Light.eot');
-    src: url('Lato-Light.eot?#iefix') format('embedded-opentype'),
-        url('Lato-Light.woff2') format('woff2'),
-        url('Lato-Light.woff') format('woff'),
-        url('Lato-Light.ttf') format('truetype');
+    src: url('fonts/Lato-Light.eot');
+    src: url('fonts/Lato-Light.eot?#iefix') format('embedded-opentype'),
+        url('fonts/Lato-Light.woff2') format('woff2'),
+        url('fonts/Lato-Light.woff') format('woff'),
+        url('fonts/Lato-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Lato';
-    src: url('Lato-Bold.eot');
-    src: url('Lato-Bold.eot?#iefix') format('embedded-opentype'),
-        url('Lato-Bold.woff2') format('woff2'),
-        url('Lato-Bold.woff') format('woff'),
-        url('Lato-Bold.ttf') format('truetype');
+    src: url('fonts/Lato-Bold.eot');
+    src: url('fonts/Lato-Bold.eot?#iefix') format('embedded-opentype'),
+        url('fonts/Lato-Bold.woff2') format('woff2'),
+        url('fonts/Lato-Bold.woff') format('woff'),
+        url('fonts/Lato-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Lato';
-    src: url('Lato-Black.eot');
-    src: url('Lato-Black.eot?#iefix') format('embedded-opentype'),
-        url('Lato-Black.woff2') format('woff2'),
-        url('Lato-Black.woff') format('woff'),
-        url('Lato-Black.ttf') format('truetype');
+    src: url('fonts/Lato-Black.eot');
+    src: url('fonts/Lato-Black.eot?#iefix') format('embedded-opentype'),
+        url('fonts/Lato-Black.woff2') format('woff2'),
+        url('fonts/Lato-Black.woff') format('woff'),
+        url('fonts/Lato-Black.ttf') format('truetype');
     font-weight: 900;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Lato';
-    src: url('Lato-Regular.eot');
-    src: url('Lato-Regular.eot?#iefix') format('embedded-opentype'),
-        url('Lato-Regular.woff2') format('woff2'),
-        url('Lato-Regular.woff') format('woff'),
-        url('Lato-Regular.ttf') format('truetype');
+    src: url('fonts/Lato-Regular.eot');
+    src: url('fonts/Lato-Regular.eot?#iefix') format('embedded-opentype'),
+        url('fonts/Lato-Regular.woff2') format('woff2'),
+        url('fonts/Lato-Regular.woff') format('woff'),
+        url('fonts/Lato-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
