--- a/singolo1.css
+++ b/singolo1.css
@@ -36,7 +36,8 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, em, img, strong, sub, sup, b, 
 .header-body__logo {
     color: #ffffff;
     width: 50%;
-    padding-top: 30px;  
+    padding-top: 30px;
+    padding-left: 2px; 
 }
 
 a {
@@ -48,7 +49,7 @@ a {
 .header-body a {
     color: #ffffff;
     text-decoration: none;
-    font-weight: normal;
+    font-weight: bold;
     font-size: 25px;
     letter-spacing: -0.55px;
 }
@@ -116,7 +117,7 @@ a {
 .header-body__nav a{
     position: relative;
     font-size: 12px;
-    font-weight: bold;
+    font-weight: normal;
 }
 
 .caption {
@@ -188,4 +189,66 @@ a {
     width: 484px;
     margin-top: 174px;
     margin-left: 73px;
+}
+
+.services-body {
+    background-color: #f2f2f2;
+    height: 500px;
+    border-bottom: 6px solid #ffffff;
+}
+
+.services-wrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: space-around;
+}
+
+.services-body__section {
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight: 200;
+    color: #666d89;
+    text-align: justify;
+    line-height: 1.7;
+    letter-spacing: -0.2px;
+    padding-left: 2px; 
+    margin-bottom: 34px;  
+}
+
+.services-body__title {
+    padding-left: 2px; 
+    padding-top: 60px;
+    font-size: 30px;
+    font-weight: 900;
+    font-stretch: normal;
+    color: #666d89;
+}
+
+.services-body__item__text {
+    display: block;
+    width: 219px;
+    height: 111px;
+    color: #666d89;
+    font-size: 12px;
+    float: right;
+    margin: 5px;
+    line-height: 1.7;
+    letter-spacing: -0.1px;
+    text-align: justify;
+    margin-right: 1px;
+}
+
+.services-body__item__caption {
+    font-size: 18px;
+    font-weight: 900;
+    margin-bottom: 5px;
+}
+
+.services-body__item__logo {
+    width: 59px;
+    margin-top: 13px;
+    margin-right: 15px;
+    margin-left: 4px; 
 }
