feat: add hiding excess text in blocks

--- a/singolo1.css
+++ b/singolo1.css
@@ -238,6 +238,8 @@ a {
     letter-spacing: -0.1px;
     text-align: justify;
     margin-right: 1px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .services-body__item__caption {
