--- a/singolo1.css
+++ b/singolo1.css
@@ -17,7 +17,7 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, em, img, strong, sub, sup, b, 
 .container {
     width: 1020px;
     margin: 0 auto;
-    padding: 0px 40px 0px 38px;
+    padding: 0px 40px 0px 40px;
 }
 
 .header-body {
@@ -37,7 +37,6 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, em, img, strong, sub, sup, b, 
     color: #ffffff;
     width: 50%;
     padding-top: 30px;
-    padding-left: 2px; 
 }
 
 a {
@@ -69,7 +68,7 @@ a {
     position: relative;
     width: 50%;
     top: 43px;
-    padding-left: 102px;
+    padding-left: 100px;
 }
 
 .header-body__nav ul {
@@ -83,14 +82,14 @@ a {
 
 }
 
-.header-body__nav__item{
+.header-body__nav-item{
     position: relative;
     padding-right: 30px;
     color: #494e62;
     font-size: 8px;
 }
 
-.header-body__nav__item::after{
+.header-body__nav-item::after{
     position: absolute;
     top: 50%;
     right: 15px; 
@@ -101,7 +100,7 @@ a {
     border-radius: 50%;
 }
 
-.header-body__nav__item:last-child::after {
+.header-body__nav-item:last-child::after {
     width: 0;
 }
 
@@ -145,7 +144,7 @@ a {
     background: url('assets/images/chev.png') no-repeat;
     cursor: pointer;
     width: 16px;
-    margin-left: 4px;
+    margin-left: 2px;
     margin-top: 281px;
 }
 
@@ -213,12 +212,10 @@ a {
     text-align: justify;
     line-height: 1.7;
     letter-spacing: -0.2px;
-    padding-left: 2px; 
     margin-bottom: 34px;  
 }
 
 .services-body__title {
-    padding-left: 2px; 
     padding-top: 60px;
     font-size: 30px;
     font-weight: 900;
@@ -226,7 +223,7 @@ a {
     color: #666d89;
 }
 
-.services-body__item__text {
+.services-body__item-text {
     display: block;
     width: 219px;
     height: 111px;
@@ -242,15 +239,14 @@ a {
     text-overflow: ellipsis;
 }
 
-.services-body__item__caption {
+.services-body__item-caption {
     font-size: 18px;
     font-weight: 900;
     margin-bottom: 5px;
 }
 
-.services-body__item__logo {
+.services-body__item-logo {
     width: 59px;
     margin-top: 13px;
-    margin-right: 15px;
-    margin-left: 4px; 
+    margin-right: 15.5px;
 }
