--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, em, img, strong, sub, sup, b, 
     font-family: 'Lato', sans-serif;
     box-sizing: border-box;
     font-size: 10px;
+    scroll-behavior: smooth;
 }
 
 .container {
@@ -21,10 +22,12 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, em, img, strong, sub, sup, b, 
 }
 
 .header-body {
-    position: relative;
+    position: sticky;
+    top: 0;
     border-bottom: 6px solid #323746;
     background-color: #2d303a;
     height: 95px;
+    z-index: 2;
 }
 
 .header-wrapper {
@@ -104,13 +107,18 @@ a {
     width: 0;
 }
 
-.header-body__nav ul li a:focus{
+a.active {
     color: #c9605c;
 }
 
 .header-body__nav ul li:nth-child(5){
     position: relative;
     padding-right: 0px;
+}
+
+.anchor {
+    position: relative;
+    top: -50px;
 }
 
 .header-body__nav a{
@@ -146,6 +154,7 @@ a {
     width: 16px;
     margin-left: 2px;
     margin-top: 281px;
+    z-index: 1;
 }
 
 .slider-body__back:hover {
@@ -164,7 +173,7 @@ a {
     cursor: pointer;
     width: 16px;
     margin-top: 281px;
-    margin-left: 55px;
+    z-index: 1;
 }
 
 .slider-body__next:hover {
@@ -180,6 +189,7 @@ a {
 
 .slider-body__iphone_vertical {
     background: url('assets/images/iphone_vertical.png') no-repeat;
+    height: 100%;
     width: 240px;
     margin-top: 53px;
     margin-left: 54px;
@@ -187,15 +197,114 @@ a {
 
 .slider-body__iphone_horizontal {
     background: url('assets/images/iphone_horizontal.png') no-repeat;
+    height: 100%;
     width: 484px;
     margin-top: 174px;
     margin-left: 73px;
 }
 
+.slide {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-right: 110px;
+}
+
+.slider {
+    display: flex;
+    flex-direction: row;
+    width: 910px;
+    overflow: hidden;
+}
+
+.slider div.slide {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.slider-body__slide-2 {
+    background: url('assets/images/Slide-2.jpg') no-repeat;
+    width: 960px;
+    height: 600px;
+    margin-left:-50px;
+}
+
+.screen_vertical {
+    width: 188px;
+    height: 333px;
+    background-color: black;
+    margin-top: 65px;
+    margin-left: 14px;
+}
+
+.button_vertical {
+    width: 42px;
+    height: 42px;
+    margin-left: 88px;
+    margin-top: 10px;
+    background-color: transparent;
+    border-radius: 50%;
+}
+
+.screen_horizontal {
+    width: 333px;
+    height: 188px;
+    background-color: black;
+    margin-left: 60px;
+    margin-top: -115px;
+}
+
+.button_horizontal {
+    width: 42px;
+    height: 42px;
+    margin-left: 9px;
+    margin-top: 87px;
+    background-color: transparent;
+    border-radius: 50%;
+}
+
+.screen_vertical2 {
+    width: 200px;
+    height: 354px;
+    background-color: black;
+    margin-top: 112px;
+    margin-left: 398px;
+}
+
+.button_vertical2 {
+    width: 44px;
+    height: 44px;
+    margin-left: 475px;
+    margin-top: 10px;
+    background-color: transparent;
+    border-radius: 50%;
+}
+
+.button_vertical:hover {
+    cursor: pointer;
+}
+
+.button_horizontal:hover {
+    cursor: pointer;
+}
+
+.button_vertical2:hover {
+    cursor: pointer;
+}
+
 .services-body {
     background-color: #f2f2f2;
     height: 500px;
-    border-bottom: 6px solid #ffffff;
+    border-bottom: 6px solid #ffffff;   
 }
 
 .services-wrapper {
@@ -305,6 +414,11 @@ a {
     color: #ffffff;
 }
 
+button.portfolio__button-active {
+    border: 1px solid #ffffff;
+    color: #ffffff;
+}
+
 .section-header__nav {
     width: 289px;
     height: 57px;
@@ -326,7 +440,17 @@ a {
 }
 
 .portfolio__img {
+    width: 220px;
+    height: 187px;
     margin-bottom: 20px;
+}
+
+.portfolio__img:hover {
+    cursor: pointer;
+}
+
+.select-img {
+    border: 5px solid #F06C64;
 }
 
 .about-us {
