--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, em, img, strong, sub, sup, b, 
 	border: 0;
 	outline: 0;                              
 	vertical-align: baseline;          
-	background: transparent;                         
+    background: transparent;                         
     }
 *,
 *:before,
@@ -617,6 +617,10 @@ button.portfolio__button-active {
     color: #f48c8f !important;
 }
 
+.footer-body__inputs textarea::placeholder {
+    color: #f48c8f !important;
+}
+
 .footer-body__inputs textarea {
     width: 620px;
     height: 202px;
@@ -699,4 +703,59 @@ button.portfolio__button-active {
 .button_sub {
     background-color: white !important;
     cursor: pointer;
+}
+
+#resultWindow {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background-color: #434759;
+    z-index: 3;
+    opacity: .9;
+}
+
+#resultWindow.hidden {
+    display: none;
+}
+
+#message {
+    position: absolute;
+    top: 50%;
+    left: 45%;
+    width: 300px;
+    height: 180px;
+    border: 2px solid black;
+    border-radius: 10px;
+    text-align: center;
+    background-color: #ffffff;
+    overflow: hidden;
+}
+
+#message p {
+    margin-top: 3px;
+    margin-bottom: 5px;
+}
+
+#message span {
+    font-size: 1.4rem;
+}
+
+.message-title {
+    font-size: 1.8rem !important;
+    font-weight: bold;
+}
+
+.message-button {
+    height: 30px;
+    width: 80px;
+    border: 1px solid black;
+    background-color: #ffffff;
+    border-radius: 10px;
+}
+
+.message-button:hover {
+    cursor: pointer;
+    background-color:#9ba4c4;
 }
