--- a/style.css
+++ b/style.css
@@ -16,12 +16,13 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, em, img, strong, sub, sup, b, 
 }
 
 .container {
-    width: 1020px;
+    max-width: 1020px;
     margin: 0 auto;
     padding: 0px 40px 0px 40px;
 }
 
 .header-body {
+    width: 100%;
     position: sticky;
     top: 0;
     border-bottom: 6px solid #323746;
@@ -38,7 +39,6 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, em, img, strong, sub, sup, b, 
 
 .header-body__logo {
     color: #ffffff;
-    width: 50%;
     padding-top: 30px;
 }
 
@@ -69,9 +69,9 @@ a {
 
 .header-body__nav {
     position: relative;
-    width: 50%;
     top: 43px;
     padding-left: 100px;
+    margin-right: 85px;
 }
 
 .header-body__nav ul {
@@ -89,7 +89,6 @@ a {
     position: relative;
     padding-right: 30px;
     color: #494e62;
-    font-size: 8px;
 }
 
 .header-body__nav-item::after{
@@ -150,11 +149,15 @@ a.active {
 }
 
 .slider-body__back{
+    display: inline-block;
+    position: absolute;
+    top: 47%;
+    bottom: 0;
+    left: 0;
+    right: auto;
     background: url('assets/images/chev.png') no-repeat;
     cursor: pointer;
     width: 16px;
-    margin-left: 2px;
-    margin-top: 281px;
     z-index: 1;
 }
 
@@ -169,11 +172,16 @@ a.active {
 }
 
 .slider-body__next{
+    display: inline-block;
+    position: absolute;
+    top: 47%;
+    bottom: 0;
+    left: auto;
+    right: 0;
     background: url('assets/images/chev.png') no-repeat;
     transform: scale(-1, 1);
     cursor: pointer;
     width: 16px;
-    margin-top: 281px;
     z-index: 1;
 }
 
@@ -189,39 +197,93 @@ a.active {
 }
 
 .slider-body__iphone_vertical {
-    background: url('assets/images/iphone_vertical.png') no-repeat;
-    height: 100%;
+    background-image: url('assets/images/iphone_vertical.png');
+    background-repeat:no-repeat;
+    background-size: 100%;
     width: 240px;
     margin-top: 53px;
-    margin-left: 54px;
+    margin-left: 72px;
 }
 
 .slider-body__iphone_horizontal {
-    background: url('assets/images/iphone_horizontal.png') no-repeat;
-    height: 100%;
+    background-image: url('assets/images/iphone_horizontal.png');
+    background-repeat:no-repeat;
+    background-size: 100%;
     width: 484px;
     margin-top: 174px;
     margin-left: 73px;
 }
 
 .slide {
+    display: none;
+    position: relative;
+    margin: 0 auto;
+    height: 100%;
+    animation: 0.5s ease-in-out;
+}
+.active,
+.next {
     display: flex;
     flex-direction: row;
-    margin-right: 83.5px;
 }
 
-.slide:nth-child(1) {
-    left: 100%;
+.next {
+    position: absolute;
+    top: 0;
+    width: 100%;
 }
 
-.slide:nth-child(2) {
-    left: 200%;
+.item-slide {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+.to-left {
+    animation-name: left;
+}
+
+.to-right {
+    animation-name: right;
+    animation-direction: reverse;
+}
+
+.from-left {
+    animation-name: left;
+    animation-direction: reverse;
+}
+
+.from-right {
+    animation-name: right;
+}
+
+@keyframes left {
+    from {
+        left: 0;
+    }
+    to {
+        left: -100%;
+    }
+}
+
+@keyframes right {
+    from {
+        left: 100%;
+    }
+    to {
+        left: 0;
+    }
 }
 
 .slider {
-    display: flex;
-    flex-direction: row;
-    width: 910px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transform: translate(-50%,-50%);
 }
 
 .slider-body__slide-2 {
@@ -299,7 +361,7 @@ a.active {
 
 .services-body {
     background-color: #f2f2f2;
-    height: 500px;
+    height: 100%;
     border-bottom: 6px solid #ffffff;   
 }
 
@@ -373,8 +435,16 @@ a.active {
     padding-top: 24px;
 }
 
+.portfolio>.wrapper {
+    width: 100%;
+    max-width: 1020px;
+    height: 100%;
+    margin: 0 auto;
+    padding: 0px 40px 0px 40px;
+}
+
 .portfolio {
-    height: 870px;
+    height: 100%;
     background-color: #2d303a;
     border-bottom: 6px solid #323746;
 }
@@ -425,8 +495,8 @@ button.portfolio__button-active {
 }
 
 .portfolio__project {
-    width: 940px;
-    height: 601px;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -436,8 +506,8 @@ button.portfolio__button-active {
 }
 
 .portfolio__img {
-    width: 220px;
-    height: 187px;
+    min-width: 100px;
+    height: auto;
     margin-bottom: 20px;
 }
 
@@ -452,7 +522,7 @@ img.select-img {
 
 .about-us {
     background-color: #f2f2f2;
-    height: 734px;
+    height: 100%;
     border-bottom: 6px solid #ffffff;
 }
 
@@ -484,19 +554,24 @@ img.select-img {
 
 .about-us__employees {
     margin-top: 44px;
+    height: 100%;
     display: flex;
+    flex-wrap: nowrap;
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: 67px;
 }
 
 .about-us__img {
-    height: 300px;
-    width: 300px;
+    min-width: 215px;
+    width: 100%;
+    height: auto;
 }
 
 .about-us__person {
-    height: 450px;
-    width: 300px;
+    flex: 1 0 25%;
+    height: 100%;
+    width: 100%;
 }
 
 .about-us__share {
@@ -534,6 +609,14 @@ img.select-img {
     width: 34px;
 }
 
+.about-us>.wrapper {
+    width: 100%;
+    max-width: 1020px;
+    height: 100%;
+    margin: 0 auto;
+    padding: 0px 40px 0px 40px;
+}
+
 .about-us__info {
     display: block;
     font-size: 1.25rem;
@@ -544,8 +627,16 @@ img.select-img {
     color: #767e9e;
 }
 
+.footer-body>.wrapper {
+    width: 100%;
+    max-width: 1020px;
+    height: 100%;
+    margin: 0 auto;
+    padding: 0px 40px 0px 40px;
+}
+
 .footer-body {
-    height: 654px;
+    height: 100%;
     background-color: #f06c64;
     border-bottom: 6px solid #ea676b;
 }
@@ -686,6 +777,8 @@ img.select-img {
 
 .footer-bottom__links {
     margin-top: 22px;
+    width: 100%;
+    text-align: end;
 }
 
 .footer-bottom__links img{
@@ -695,6 +788,14 @@ img.select-img {
 .footer-bottom__links img:hover{
     margin-bottom: -2px;
     cursor: pointer;
+}
+
+.footer-bottom>.wrapper {
+    width: 100%;
+    max-width: 1020px;
+    height: 100%;
+    margin: 0 auto;
+    padding: 0px 40px 0px 40px;
 }
 
 .button_sub {
@@ -755,4 +856,106 @@ img.select-img {
 .message-button:hover {
     cursor: pointer;
     background-color:#9ba4c4;
+}
+
+.about-us__person:nth-child(2) {
+    margin: 0 1.9%;
+}
+
+@media (min-width: 768px) and (max-width: 1019px) {
+    .slider-body__iphone_horizontal {
+        width: 48vw;
+        margin-left: 30px;
+    }
+
+    .screen_vertical {
+        height: 33.4vw;
+        width: 18.9vw;
+        margin-left: 1.3vw;
+        margin-top: 50px;
+    }
+
+    .screen_vertical2 {
+        height: 35.6vw;
+        width: 20.1vw;
+        margin-left: 39.9vw;
+        margin-top: 89px;
+    }
+
+    .button_vertical2 {
+        margin-left: 47.5vw;
+        margin-top: 5px;
+    }
+
+    .screen_horizontal {
+        width: 33.3vw;
+        height: 18.9vw;
+        margin-left: 5.9vw;
+        margin-top: -96px;
+    }
+    .button_horizontal {
+        margin-top: 65px;
+        margin-left: 4px;
+    }
+    .slider-body__iphone_vertical {
+        width: 24vw;
+    }
+
+    .slider-body {
+        height: 60vw;
+    }
+    .slider-body__slide-2 {
+        width: 100vw;
+        height: 60vw;
+    }
+    .portfolio__img {
+        flex: 1 0 20%;
+        margin-right: 20px;
+    }
+
+    
+    .services-body__section {
+        margin-bottom: 60px;
+    }
+
+    .services-wrapper {
+        margin-bottom: 25px;
+    }
+
+    .button_sub {
+        margin-bottom: 39px !important;
+    }
+    .about-us__name {
+        width: 30vw;
+    }
+}
+@media (max-width: 1019px){
+
+    .portfolio__img {
+        flex-basis: 25%;
+    }
+    .portfolio__project {
+        width: 94vw;
+        margin: 0px 20px 0px 0px;
+    }
+    .about-us__employees {
+        margin: 44px 0px 67px 0px;
+    }
+    .about-us__person {
+        width: 30%;
+    }
+
+    .about-us__person:nth-child(2) {
+        margin: 0 1.9%;
+    }
+    .footer-body__inputs> input {
+        width: 62vw;
+    }
+    .footer-body__inputs> textarea {
+        width: 62vw;
+    }
+
+    .services-body__item {
+        margin-bottom: 39px;
+    }
 }
